--- a/views/css/notification.css
+++ b/views/css/notification.css
@@ -3,9 +3,9 @@ html {
 }
 
 body {
-    padding: 5px;
+    padding: 0;
     font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
-    color: #fff;
+    color: #eee;
 }
 
 .message {
@@ -27,7 +27,7 @@ body {
     margin:0px;
     display:block;
     position: absolute;
-    top: 24px;
+    top: 0px;
     color: #fff;
     font-size: .6em;
     font-weight: normal;
@@ -113,12 +113,13 @@ body {
 .text p {
     padding: 10px;
     z-index: 1;
-    overflow: hidden;
     text-overflow: ellipsis;
     font-size: 1.2em;
+    position: absolute;
+    top: 20px;
 }
 
-.grey, .color0 {
+/*.grey, .color0 {
     background-color: #646265;
 }
 
@@ -144,4 +145,4 @@ body {
 
 .red, .color6 {
     background-color: #EF0019;
-}
+}*/
